--- a/demo/index.html
+++ b/demo/index.html
@@ -25,16 +25,17 @@
 <template id="app" is="dom-bind">
     <div style="position: absolute; z-index: 2;">
         <paper-fab id="clear" mini icon="delete" title="delete" on-tap="clear"></paper-fab>
-        <paper-fab id="undo" mini icon="undo" title="undo" on-tap="undo"></paper-fab>
-        <paper-fab id="redo" mini icon="redo" title="redo" on-tap="redo"></paper-fab>
-        <paper-fab id="recognize" mini icon="send" title="reco" on-tap="recognize"></paper-fab>
+        <paper-fab id="undo" mini icon="undo" title="undo" on-tap="undo" disabled="{{ !hasUndo }}"></paper-fab>
+        <paper-fab id="redo" mini icon="redo" title="redo" on-tap="redo" disabled="{{ !hasRedo }}"></paper-fab>
+        <paper-fab id="recognize" mini icon="send" title="reco" on-tap="recognize" disabled="{{ !hasUndo }}"></paper-fab>
     </div>
     <myscript-ink-paper type="TEXT"
                         timeout="-1"
                         application-key="{{ applicationKey }}"
                         hmac-key="{{ hmacKey }}"
                         on-result="recognized"
-                        on-error="error">
+                        on-error="error"
+                        on-changed="_onChanged">
     </myscript-ink-paper>
     <paper-toast id="error" text="Recognition failed"></paper-toast>
     <p id="result"></p>
@@ -58,9 +59,31 @@
                 alert = document.querySelector('#error'),
                 result = document.querySelector('#result');
 
+            app.hasRedo = app.hasUndo = false;
+
+            input.addEventListener('undo-changed', function (e) {
+               app.hasUndo = e.detail.hasUndo;
+                app.hasRedo = e.detail.hasRedo;
+            });
+
+            input.addEventListener('redo-changed', function (e) {
+                app.hasUndo = e.detail.hasUndo;
+                app.hasRedo = e.detail.hasRedo;
+            });
+
+            input.addEventListener('cleared', function (e) {
+                app.hasUndo = e.detail.hasUndo;
+                app.hasRedo = e.detail.hasRedo;
+            });
+
             // Settings
             app.applicationKey = 'af5f7b94-85e6-458c-8336-38f572e2f494';
             app.hmacKey = '39989a38-7136-46ef-9e6e-45c7eae1f147';
+
+            app._onChanged = function (e) {
+                app.hasUndo = e.detail.hasUndo;
+                app.hasRedo = e.detail.hasRedo;
+            };
 
             app.clear = function () {
                 input.clear();
