--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,7 @@
     <link rel="import" href="../../iron-icons/av-icons.html">
     <link rel="import" href="../../paper-fab/paper-fab.html">
     <link rel="import" href="../../paper-toast/paper-toast.html">
+    <link rel="import" href="../../paper-input/paper-input.html">
     <link rel="import" href="../myscript-ink-paper.html">
 </head>
 <style>
@@ -20,32 +21,64 @@
         padding: 0;
         margin: 0;
     }
-    #ink-paper {
-        height: 90%;
-    }
+
     #buttons {
         position: absolute;
         z-index: 2;
     }
+
     #result {
-        height: 10%;
+        height: 100px;
         text-align: center;
         font-size: xx-large;
+    }
+
+    #authenticationKeys {
+        min-height: 72px;
+    }
+
+    #ink-paper {
+        height: calc(100% - 172px);
     }
 </style>
 <body unresolved>
 <template id="app" is="dom-bind">
+    <iron-localstorage id="applicationkey"
+                       name="input-demo-applicationkey"
+                       autoSaveDisabled="true"
+                       value="{{applicationkey}}">
+    </iron-localstorage>
+    <iron-localstorage id="hmackey"
+                       name="input-demo-hmackey"
+                       autoSaveDisabled="true"
+                       value="{{hmackey}}">
+    </iron-localstorage>
+
+    <form is="iron-form" id="authenticationKeys">
+        <div class="horizontal around-justified layout">
+            <paper-input label="applicationKey"
+                         auto-validate pattern="[a-zA-Z0-9\-]*"
+                         error-message="invalid character"
+                         value="{{applicationKey}}"
+                         class="flex">
+            </paper-input>
+            <paper-input label="hmacKey"
+                         auto-validate pattern="[a-zA-Z0-9\-]*"
+                         error-message="invalid character"
+                         value="{{hmacKey}}"
+                         class="flex">
+            </paper-input>
+        </div>
+    </form>
     <div id="result"></div>
     <div id="buttons">
         <paper-fab id="clear" mini icon="delete" title="delete" on-tap="clear"></paper-fab>
         <paper-fab id="undo" mini icon="undo" title="undo" on-tap="undo" disabled="{{ !hasUndo }}"></paper-fab>
         <paper-fab id="redo" mini icon="redo" title="redo" on-tap="redo" disabled="{{ !hasRedo }}"></paper-fab>
-        <paper-fab id="recognize" mini icon="send" title="reco" on-tap="recognize"
-                   disabled="{{ !hasUndo }}"></paper-fab>
     </div>
     <myscript-ink-paper id="ink-paper"
+                        protocol="WebSocket"
                         type="TEXT"
-                        timeout="-1"
                         application-key="{{ applicationKey }}"
                         hmac-key="{{ hmacKey }}"
                         on-result="recognized"
@@ -75,10 +108,6 @@
 
             app.hasRedo = app.hasUndo = false;
 
-            // Settings
-            app.applicationKey = 'af5f7b94-85e6-458c-8336-38f572e2f494';
-            app.hmacKey = '39989a38-7136-46ef-9e6e-45c7eae1f147';
-
             app._onChanged = function (e) {
                 app.hasUndo = e.detail.hasUndo;
                 app.hasRedo = e.detail.hasRedo;
@@ -93,9 +122,6 @@
             };
             app.redo = function () {
                 input.redo();
-            };
-            app.recognize = function () {
-                input.recognize();
             };
             app.error = function error() {
                 alert.show();
