[FIX] fixes demo localstorage

--- a/demo/index.html
+++ b/demo/index.html
@@ -46,12 +46,12 @@
     <iron-localstorage id="applicationkey"
                        name="input-demo-applicationkey"
                        autoSaveDisabled="true"
-                       value="{{applicationkey}}">
+                       value="{{applicationKey}}">
     </iron-localstorage>
     <iron-localstorage id="hmackey"
                        name="input-demo-hmackey"
                        autoSaveDisabled="true"
-                       value="{{hmackey}}">
+                       value="{{hmacKey}}">
     </iron-localstorage>
 
     <form is="iron-form" id="authenticationKeys">
